[gd_scene load_steps=2 format=3 uid="uid://quest_ui_001"]

[ext_resource type="Script" path="res://scripts/quest_ui.gd" id="1_quest_ui"]

[node name="QuestUI" type="CanvasLayer"]
visible = true
script = ExtResource("1_quest_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 650.0
offset_bottom = 750.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackgroundTexture" type="TextureRect" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 44
text = "任务"
horizontal_alignment = 1

[node name="ChapterProgressLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 28
text = "章节 1: 0/2 任务完成"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 140.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestList" type="VBoxContainer" parent="Control/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "关闭 (ESC)"

[node name="NoQuestLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "暂无进行中的任务"
horizontal_alignment = 1
vertical_alignment = 1

