# ä»»åŠ¡UIè„šæœ¬
extends CanvasLayer

# å¯¼å‡ºå˜é‡ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­é…ç½®ï¼‰
@export var background_texture: Texture2D = null  # èƒŒæ™¯å›¾ç‰‡ï¼ˆå¯é€‰ï¼‰

# èŠ‚ç‚¹å¼•ç”¨ï¼ˆéœ€è¦åœ¨åœºæ™¯ä¸­é…ç½®ï¼‰
@onready var panel: Panel = $Control/Panel
@onready var background_texture_rect: TextureRect = $Control/Panel/BackgroundTexture
@onready var title_label: Label = $Control/Panel/TitleLabel
@onready var chapter_progress_label: Label = $Control/Panel/ChapterProgressLabel  # â­ ç« èŠ‚è¿›åº¦æ ‡ç­¾
@onready var quest_list: VBoxContainer = $Control/Panel/ScrollContainer/QuestList
@onready var scroll_container: ScrollContainer = $Control/Panel/ScrollContainer
@onready var close_button: Button = $Control/Panel/CloseButton
@onready var no_quest_label: Label = $Control/Panel/NoQuestLabel

var quest_item_scene: PackedScene = null

func _ready():
	# æ·»åŠ åˆ°ç»„
	add_to_group("quest_ui")
	
	# åˆå§‹æ˜¾ç¤ºï¼ˆå·¦ä¸Šè§’å¸¸é©»æ˜¾ç¤ºï¼‰
	visible = true
	
	# è¿æ¥æŒ‰é’®
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)
	
	# â­ è¿æ¥ä»»åŠ¡ç®¡ç†å™¨ä¿¡å·ï¼ˆç¡®ä¿ä¿¡å·æ­£ç¡®è¿æ¥ï¼‰
	if has_node("/root/QuestManager"):
		if not QuestManager.quest_started.is_connected(_on_quest_started):
			QuestManager.quest_started.connect(_on_quest_started)
		if not QuestManager.quest_completed.is_connected(_on_quest_completed):
			QuestManager.quest_completed.connect(_on_quest_completed)
		if not QuestManager.quest_progress_updated.is_connected(_on_quest_progress_updated):
			QuestManager.quest_progress_updated.connect(_on_quest_progress_updated)
			print("[INFO] âœ… å·²è¿æ¥ä»»åŠ¡è¿›åº¦æ›´æ–°ä¿¡å·")
		if not QuestManager.chapter_completed.is_connected(_on_chapter_completed):
			QuestManager.chapter_completed.connect(_on_chapter_completed)
		print("[INFO] âœ… ä»»åŠ¡UIä¿¡å·è¿æ¥å®Œæˆ")
	else:
		print("[WARN] âš ï¸ QuestManageræœªæ‰¾åˆ°ï¼Œæ— æ³•è¿æ¥ä¿¡å·")
	
	# è®¾ç½®èƒŒæ™¯å›¾ç‰‡
	if background_texture and background_texture_rect:
		background_texture_rect.texture = background_texture
		background_texture_rect.visible = true
		# å¦‚æœæœ‰èƒŒæ™¯å›¾ï¼Œè®¾ç½®Panelä¸ºé€æ˜
		if panel:
			var style_box = StyleBoxEmpty.new()
			panel.add_theme_stylebox_override("panel", style_box)
		print("[INFO] å·²è®¾ç½®ä»»åŠ¡UIèƒŒæ™¯å›¾ç‰‡")
	elif background_texture_rect:
		background_texture_rect.visible = false
	
	# è®¾ç½®æ ·å¼
	_setup_ui_style()
	
	# â­ åˆå§‹åŒ–ç« èŠ‚è¿›åº¦æ ‡ç­¾ï¼ˆå¦‚æœåœºæ™¯ä¸­æ²¡æœ‰ï¼‰
	if not chapter_progress_label:
		var progress_label = panel.get_node_or_null("ChapterProgressLabel")
		if progress_label:
			chapter_progress_label = progress_label
		else:
			# å¦‚æœåœºæ™¯ä¸­æ²¡æœ‰ï¼Œåˆ›å»ºä¸€ä¸ª
			chapter_progress_label = Label.new()
			chapter_progress_label.name = "ChapterProgressLabel"
			chapter_progress_label.set_anchors_preset(Control.PRESET_TOP_WIDE)
			chapter_progress_label.offset_top = 65.0
			chapter_progress_label.offset_bottom = 95.0
			chapter_progress_label.offset_left = 10.0
			chapter_progress_label.offset_right = -10.0
			chapter_progress_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
			chapter_progress_label.add_theme_color_override("font_color", Color(0.5, 0.8, 1.0, 1.0))
			chapter_progress_label.add_theme_font_size_override("font_size", 28)
			panel.add_child(chapter_progress_label)
	
	# â­ è®¾ç½®ä»»åŠ¡åˆ—è¡¨å®¹å™¨çš„ç»Ÿä¸€é—´è·å’Œå¸ƒå±€
	if quest_list:
		quest_list.add_theme_constant_override("separation", 12)  # ç»Ÿä¸€é—´è·12px
		quest_list.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		quest_list.size_flags_vertical = Control.SIZE_EXPAND_FILL
	
	# åˆå§‹æ›´æ–°
	update_quest_list()
	
	# â­ å®šæœŸæ£€æŸ¥å¹¶æ›´æ–°ä»»åŠ¡åˆ—è¡¨ï¼ˆç¡®ä¿è¿›åº¦å®æ—¶æ˜¾ç¤ºï¼‰
	call_deferred("_start_periodic_update")

func _setup_ui_style():
	"""è®¾ç½®UIæ ·å¼ - ç¾åŒ–ç‰ˆæœ¬"""
	if panel:
		# â­ åˆ›å»ºæ›´ç¾è§‚çš„èƒŒæ™¯æ ·å¼ï¼ˆæ¸å˜æ•ˆæœã€æŸ”å’Œé˜´å½±ï¼‰
		var style_box = StyleBoxFlat.new()
		# ä½¿ç”¨æ›´æŸ”å’Œçš„æ·±è‰²èƒŒæ™¯ï¼Œå¸¦ä¸€ç‚¹è“è‰²è°ƒ
		style_box.bg_color = Color(0.15, 0.18, 0.25, 0.96)  # æ·±è“ç°è‰²ï¼Œæ›´æŸ”å’Œ
		# ä½¿ç”¨é‡‘è‰²è¾¹æ¡†ï¼Œæ›´æœ‰è´¨æ„Ÿ
		style_box.border_color = Color(0.9, 0.75, 0.4, 1.0)  # é‡‘è‰²è¾¹æ¡†
		style_box.border_width_left = 5
		style_box.border_width_top = 5
		style_box.border_width_right = 5
		style_box.border_width_bottom = 5
		# æ›´å¤§çš„åœ†è§’ï¼Œæ›´ç°ä»£
		style_box.corner_radius_top_left = 15
		style_box.corner_radius_top_right = 15
		style_box.corner_radius_bottom_left = 15
		style_box.corner_radius_bottom_right = 15
		# æ·»åŠ é˜´å½±æ•ˆæœï¼ˆé€šè¿‡è¾¹æ¡†å®ç°ï¼‰
		style_box.shadow_color = Color(0.0, 0.0, 0.0, 0.5)
		style_box.shadow_size = 8
		style_box.shadow_offset = Vector2(0, 4)
		panel.add_theme_stylebox_override("panel", style_box)
	
	# â­ æ ‡é¢˜ä½¿ç”¨æ¸å˜é‡‘è‰²ï¼Œæ›´æœ‰è´¨æ„Ÿ
	if title_label:
		title_label.add_theme_color_override("font_color", Color(1.0, 0.85, 0.3, 1.0))  # é‡‘è‰²
		title_label.add_theme_font_size_override("font_size", 44)  # ç¨å¤§ä¸€äº›
	
	# â­ ç« èŠ‚è¿›åº¦ä½¿ç”¨æ›´äº®çš„è“è‰²
	if chapter_progress_label:
		chapter_progress_label.add_theme_color_override("font_color", Color(0.6, 0.9, 1.0, 1.0))  # äº®è“è‰²
		chapter_progress_label.add_theme_font_size_override("font_size", 30)  # ç¨å¤§ä¸€äº›
	
	if no_quest_label:
		no_quest_label.add_theme_color_override("font_color", Color(0.8, 0.8, 0.8, 1.0))  # æ›´äº®çš„ç°è‰²

func _input(event: InputEvent):
	"""å¤„ç†è¾“å…¥äº‹ä»¶ï¼ˆä»»åŠ¡UIå¸¸é©»æ˜¾ç¤ºï¼Œä¸å†å“åº”ESCé”®ï¼‰"""
	pass

func show_quest_ui():
	"""æ˜¾ç¤ºä»»åŠ¡UIï¼ˆå·²æ”¹ä¸ºå¸¸é©»æ˜¾ç¤ºï¼Œæ­¤å‡½æ•°ä¿ç•™ç”¨äºå…¼å®¹ï¼‰"""
	visible = true
	update_quest_list()

func hide_quest_ui():
	"""éšè—ä»»åŠ¡UIï¼ˆå·²æ”¹ä¸ºå¸¸é©»æ˜¾ç¤ºï¼Œæ­¤å‡½æ•°ä¿ç•™ç”¨äºå…¼å®¹ï¼‰"""
	visible = false

func update_quest_list():
	"""æ›´æ–°ä»»åŠ¡åˆ—è¡¨ - æ˜¾ç¤ºå½“å‰ç« èŠ‚çš„æ‰€æœ‰ä»»åŠ¡ï¼ˆå·²å®Œæˆã€è¿›è¡Œä¸­ã€æœªå¼€å§‹ï¼‰"""
	if not has_node("/root/QuestManager"):
		return
	
	if not quest_list:
		return
	
	# æ¸…ç©ºåˆ—è¡¨
	for child in quest_list.get_children():
		child.queue_free()
	
	# â­ è·å–å½“å‰ç« èŠ‚ï¼ˆæ ¹æ®ç©å®¶ä½ç½®ï¼‰
	var current_chapter = _get_current_chapter()
	
	# â­ æ›´æ–°ç« èŠ‚è¿›åº¦æ˜¾ç¤º
	_update_chapter_progress(current_chapter)
	
	# â­ è·å–å½“å‰ç« èŠ‚çš„æ‰€æœ‰ä»»åŠ¡ï¼ˆä»ä»»åŠ¡æ•°æ®åº“ï¼‰
	var quest_database = QuestManager.get_quest_database()
	var chapter_quests = []
	
	# æ”¶é›†å½“å‰ç« èŠ‚çš„æ‰€æœ‰ä»»åŠ¡
	for quest_id in quest_database:
		var quest = quest_database[quest_id]
		var quest_chapter = quest.get("chapter", 1)
		
		if quest_chapter == current_chapter:
			chapter_quests.append(quest_id)
	
	# â­ æŒ‰ä»»åŠ¡çŠ¶æ€æ’åºï¼šè¿›è¡Œä¸­ â†’ æœªå¼€å§‹ â†’ å·²å®Œæˆ
	chapter_quests.sort_custom(func(a, b):
		var a_completed = QuestManager.is_quest_completed(a)
		var a_active = QuestManager.is_quest_active(a)
		var b_completed = QuestManager.is_quest_completed(b)
		var b_active = QuestManager.is_quest_active(b)
		
		# è¿›è¡Œä¸­çš„ä»»åŠ¡ä¼˜å…ˆ
		if a_active and not b_active:
			return true
		if not a_active and b_active:
			return false
		
		# å·²å®Œæˆçš„ä»»åŠ¡æœ€å
		if a_completed and not b_completed:
			return false
		if not a_completed and b_completed:
			return true
		
		# å…¶ä»–æƒ…å†µæŒ‰IDæ’åº
		return a < b
	)
	
	if chapter_quests.is_empty():
		# æ˜¾ç¤º"æ— ä»»åŠ¡"æç¤º
		if no_quest_label:
			no_quest_label.visible = true
			no_quest_label.text = "å½“å‰ç« èŠ‚æš‚æ— ä»»åŠ¡"
		return
	
	if no_quest_label:
		no_quest_label.visible = false
	
	# â­ åˆ›å»ºæ‰€æœ‰ä»»åŠ¡é¡¹ï¼ˆåŒ…æ‹¬å·²å®Œæˆã€è¿›è¡Œä¸­ã€æœªå¼€å§‹ï¼‰
	for quest_id in chapter_quests:
		_create_quest_item(quest_id)

func _get_current_chapter() -> int:
	"""è·å–å½“å‰ç« èŠ‚ï¼ˆæ ¹æ®ç©å®¶ä½ç½®ï¼‰"""
	# åŒºåŸŸ1 = ç« èŠ‚1ï¼ŒåŒºåŸŸ2 = ç« èŠ‚2ï¼ŒåŒºåŸŸ3 = ç« èŠ‚3
	if has_node("/root/RegionManager"):
		var player = get_tree().get_first_node_in_group("player")
		if player:
			var player_x = player.global_position.x
			var current_region = RegionManager.get_region_from_x(player_x)
			return current_region
		else:
			# å¦‚æœæ‰¾ä¸åˆ°ç©å®¶ï¼Œæ ¹æ®è§£é”çš„åŒºåŸŸåˆ¤æ–­
			if RegionManager:
				var unlocked_regions = RegionManager.unlocked_regions
				if unlocked_regions != null and unlocked_regions.size() > 0:
					return unlocked_regions[-1]  # è¿”å›æœ€å¤§è§£é”åŒºåŸŸ
	return 1  # é»˜è®¤è¿”å›ç« èŠ‚1

func _update_chapter_progress(chapter: int):
	"""æ›´æ–°ç« èŠ‚è¿›åº¦æ˜¾ç¤ºï¼ˆå·²å®Œæˆä»»åŠ¡/æ€»ä»»åŠ¡ï¼‰"""
	if not has_node("/root/QuestManager"):
		return
	
	if not chapter_progress_label:
		return
	
	# â­ è·å–å½“å‰ç« èŠ‚çš„æ‰€æœ‰ä¸»ä»»åŠ¡ï¼ˆis_main: trueï¼‰
	var total_quests = 0
	var completed_quests = 0
	
	# â­ ä»ä»»åŠ¡æ•°æ®åº“è·å–æ‰€æœ‰ä»»åŠ¡
	var quest_database = QuestManager.get_quest_database()
	if not quest_database or quest_database.is_empty():
		print("[WARN] æ— æ³•è·å–ä»»åŠ¡æ•°æ®åº“æˆ–æ•°æ®åº“ä¸ºç©º")
		chapter_progress_label.text = "ç« èŠ‚ %d: åŠ è½½ä¸­..." % chapter
		return
	
	for quest_id in quest_database:
		var quest = quest_database[quest_id]
		var quest_chapter = quest.get("chapter", 1)
		var is_main = quest.get("is_main", false)
		
		# åªç»Ÿè®¡ä¸»ä»»åŠ¡
		if quest_chapter == chapter and is_main:
			total_quests += 1
			# æ£€æŸ¥æ˜¯å¦å·²å®Œæˆ
			if QuestManager.is_quest_completed(quest_id):
				completed_quests += 1
	
	# â­ æ›´æ–°è¿›åº¦æ˜¾ç¤º
	if total_quests > 0:
		chapter_progress_label.text = "ç« èŠ‚ %d: %d/%d ä»»åŠ¡å®Œæˆ" % [chapter, completed_quests, total_quests]
		chapter_progress_label.visible = true
		#print("[DEBUG] ğŸ“Š ç« èŠ‚è¿›åº¦æ›´æ–°: ç« èŠ‚ ", chapter, " ", completed_quests, "/", total_quests, " ä»»åŠ¡å®Œæˆ")
	else:
		chapter_progress_label.text = "ç« èŠ‚ %d: æš‚æ— ä»»åŠ¡" % chapter
		chapter_progress_label.visible = true

func _create_quest_item(quest_id: String):
	"""åˆ›å»ºä»»åŠ¡é¡¹UI - æ”¯æŒå·²å®Œæˆã€è¿›è¡Œä¸­ã€æœªå¼€å§‹çš„ä»»åŠ¡"""
	# â­ è·å–ä»»åŠ¡ä¿¡æ¯ï¼ˆä»ä»»åŠ¡æ•°æ®åº“ï¼‰
	var quest = QuestManager.get_quest_info(quest_id)
	if quest.is_empty():
		print("[WARN] ä»»åŠ¡ä¸å­˜åœ¨: ", quest_id)
		return
	
	# â­ åˆ¤æ–­ä»»åŠ¡çŠ¶æ€ï¼ˆç®€åŒ–ç‰ˆï¼šåªåœ¨åç§°åæ˜¾ç¤ºçŠ¶æ€ï¼‰
	var is_completed = QuestManager.is_quest_completed(quest_id)
	var is_active = QuestManager.is_quest_active(quest_id)
	var status_text = ""
	
	if is_completed:
		status_text = "ï¼ˆå·²å®Œæˆï¼‰"
	elif is_active:
		status_text = "ï¼ˆè¿›è¡Œä¸­ï¼‰"
	else:
		status_text = "ï¼ˆæœªå¼€å§‹ï¼‰"
	
	# â­ è·å–ä»»åŠ¡æ•°æ®ï¼ˆå¦‚æœæ˜¯è¿›è¡Œä¸­çš„ä»»åŠ¡ï¼‰
	var quest_data = {}
	if is_active:
		quest_data = QuestManager.get_active_quest_data(quest_id)
	else:
		# å¯¹äºå·²å®Œæˆæˆ–æœªå¼€å§‹çš„ä»»åŠ¡ï¼Œåˆ›å»ºç©ºæ•°æ®
		quest_data = {"quest": quest, "progress": 0}
	
	# â­ åˆ›å»ºä»»åŠ¡é¡¹å®¹å™¨ï¼ˆå¡ç‰‡å¼è®¾è®¡ï¼‰- ä½¿ç”¨MarginContainerä½œä¸ºå¤–å±‚ï¼ˆè§£å†³é‡å é—®é¢˜ï¼‰
	var quest_item_container = MarginContainer.new()
	quest_item_container.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	# â­ MarginContaineråœ¨VBoxContainerä¸­èƒ½æ­£ç¡®è®¡ç®—é«˜åº¦
	
	# â­ ç»Ÿä¸€çš„èƒŒæ™¯æ ·å¼ï¼ˆä¸å†æ ¹æ®çŠ¶æ€åŒºåˆ†ï¼‰
	var item_style = StyleBoxFlat.new()
	item_style.bg_color = Color(0.2, 0.25, 0.3, 0.7)  # ç»Ÿä¸€çš„æ·±è“ç°è‰²èƒŒæ™¯
	item_style.border_color = Color(0.6, 0.6, 0.7, 0.8)  # ç»Ÿä¸€çš„æµ…ç°è‰²è¾¹æ¡†
	
	item_style.border_width_left = 3
	item_style.border_width_top = 3
	item_style.border_width_right = 3
	item_style.border_width_bottom = 3
	item_style.corner_radius_top_left = 12
	item_style.corner_radius_top_right = 12
	item_style.corner_radius_bottom_left = 12
	item_style.corner_radius_bottom_right = 12
	item_style.shadow_color = Color(0.0, 0.0, 0.0, 0.3)
	item_style.shadow_size = 4
	item_style.shadow_offset = Vector2(0, 2)
	
	# â­ åˆ›å»ºPanelä½œä¸ºèƒŒæ™¯å±‚ï¼ˆå¡«å……æ•´ä¸ªMarginContainerï¼‰
	var panel_bg = Panel.new()
	panel_bg.set_anchors_preset(Control.PRESET_FULL_RECT)
	panel_bg.mouse_filter = Control.MOUSE_FILTER_IGNORE  # å¿½ç•¥é¼ æ ‡äº‹ä»¶
	panel_bg.add_theme_stylebox_override("panel", item_style)
	quest_item_container.add_child(panel_bg)
	
	# â­ åˆ›å»ºå†…éƒ¨å®¹å™¨ï¼ˆæ°´å¹³å¸ƒå±€ï¼šå›¾æ ‡+å†…å®¹ï¼‰- ä¸ä½¿ç”¨PRESET_FULL_RECT
	var quest_item = HBoxContainer.new()
	quest_item.add_theme_constant_override("separation", 18)  # ç»Ÿä¸€é—´è·
	quest_item.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	# â­ ä½¿ç”¨MarginContainerè®¾ç½®å†…è¾¹è·
	quest_item_container.add_theme_constant_override("margin_left", 15)
	quest_item_container.add_theme_constant_override("margin_top", 15)
	quest_item_container.add_theme_constant_override("margin_right", 15)
	quest_item_container.add_theme_constant_override("margin_bottom", 15)
	quest_item_container.add_child(quest_item)
	
	# â­ ä»»åŠ¡å›¾æ ‡ï¼ˆç»Ÿä¸€å°ºå¯¸å’Œå¯¹é½ï¼‰- ä¼˜åŒ–ç‰ˆæœ¬
	var icon_container = VBoxContainer.new()
	# â­ VBoxContaineré»˜è®¤ä½¿ç”¨å®¹å™¨å¸ƒå±€æ¨¡å¼ï¼Œæ— éœ€æ˜¾å¼è®¾ç½®
	icon_container.custom_minimum_size = Vector2(90, 0)  # å›ºå®šå®½åº¦ï¼Œé«˜åº¦è‡ªé€‚åº”
	icon_container.size_flags_vertical = Control.SIZE_SHRINK_CENTER  # å‚ç›´å±…ä¸­
	
	var quest_icon_path = quest.get("icon", "")
	if quest_icon_path != "":
		var icon_rect = TextureRect.new()
		icon_rect.custom_minimum_size = Vector2(90, 90)  # ç»Ÿä¸€å°ºå¯¸
		icon_rect.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
		icon_rect.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
		var icon_texture = load(quest_icon_path)
		if icon_texture:
			icon_rect.texture = icon_texture
		else:
			# å¦‚æœåŠ è½½å¤±è´¥ï¼Œä½¿ç”¨å ä½ç¬¦
			var placeholder = Label.new()
			placeholder.text = "ğŸ“‹"
			placeholder.add_theme_font_size_override("font_size", 60)
			placeholder.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
			placeholder.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
			icon_rect.add_child(placeholder)
		icon_container.add_child(icon_rect)
	else:
		# â­ æ²¡æœ‰å›¾æ ‡æ—¶ä½¿ç”¨å ä½ç¬¦ - ç»Ÿä¸€å°ºå¯¸
		var placeholder = Label.new()
		placeholder.text = "ğŸ“‹"
		placeholder.custom_minimum_size = Vector2(90, 90)  # ç»Ÿä¸€å°ºå¯¸
		placeholder.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		placeholder.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
		placeholder.add_theme_font_size_override("font_size", 60)  # ç»Ÿä¸€å­—ä½“å¤§å°
		icon_container.add_child(placeholder)
	
	quest_item.add_child(icon_container)
	
	# â­ å†…å®¹å®¹å™¨ï¼ˆå‚ç›´å¸ƒå±€ï¼‰- ç®€åŒ–ç‰ˆï¼šåç§°ã€æè¿°ã€æç¤º
	var content_container = VBoxContainer.new()
	content_container.add_theme_constant_override("separation", 10)  # ç»Ÿä¸€é—´è·10px
	content_container.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	content_container.size_flags_vertical = Control.SIZE_EXPAND_FILL
	
	# â­ ä»»åŠ¡æ ‡é¢˜ - ç®€åŒ–ç‰ˆï¼šåç§°+çŠ¶æ€
	var title_label = Label.new()
	var quest_title = quest.get("title", "æœªçŸ¥ä»»åŠ¡")
	title_label.text = quest_title + status_text  # ç›´æ¥åœ¨åç§°åæ·»åŠ çŠ¶æ€
	title_label.add_theme_font_size_override("font_size", 38)  # ç»Ÿä¸€å­—ä½“å¤§å°
	title_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART  # è‡ªåŠ¨æ¢è¡Œ
	# â­ æ ¹æ®ä»»åŠ¡çŠ¶æ€è°ƒæ•´æ ‡é¢˜é¢œè‰²
	if is_completed:
		title_label.add_theme_color_override("font_color", Color(0.7, 1.0, 0.7, 1.0))  # äº®ç»¿è‰²
	elif is_active:
		title_label.add_theme_color_override("font_color", Color(1.0, 0.9, 0.3, 1.0))  # äº®é‡‘è‰²
	else:
		title_label.add_theme_color_override("font_color", Color(0.85, 0.85, 0.85, 1.0))  # æµ…ç°è‰²
	content_container.add_child(title_label)
	
	# â­ ä»»åŠ¡æè¿° - ç®€åŒ–ç‰ˆï¼šç»Ÿä¸€é¢œè‰²
	var desc_label = Label.new()
	desc_label.text = quest.get("description", "")
	desc_label.add_theme_font_size_override("font_size", 26)  # ç»Ÿä¸€å­—ä½“å¤§å°
	desc_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART  # è‡ªåŠ¨æ¢è¡Œ
	# â­ ç»Ÿä¸€ä½¿ç”¨ç™½è‰²ï¼Œæé«˜å¯è¯»æ€§
	desc_label.add_theme_color_override("font_color", Color(0.9, 0.9, 0.9, 1.0))  # æµ…ç™½è‰²
	content_container.add_child(desc_label)
	
	# â­ å¦‚æœæ˜¯è¿›è¡Œä¸­çš„ä»»åŠ¡ï¼Œæ˜¾ç¤ºè¿›åº¦ä¿¡æ¯ï¼ˆå¯¹è¯ä»»åŠ¡å’Œç­”é¢˜ä»»åŠ¡ä¸æ˜¾ç¤ºè¿›åº¦ï¼‰
	if is_active:
		var quest_type = quest.get("type", "")
		var progress_info = ""
		
		match quest_type:
			"dialogue":
				# â­ å¯¹è¯ä»»åŠ¡ä¸æ˜¾ç¤ºè¿›åº¦
				pass
			"quiz":
				# â­ ç­”é¢˜ä»»åŠ¡ä¸æ˜¾ç¤ºè¿›åº¦
				pass
			"collection":
				#var collected_items = quest_data.get("collected_items", [])
				#var progress = collected_items.size()
				#var required_count = quest.get("required_count", 1)
				#progress_info = "è¿›åº¦: %d/%d ç‰©å“" % [progress, required_count]
				pass
			"delivery":
				# â­ é…é€ä»»åŠ¡ä¸æ˜¾ç¤ºè¿›åº¦
				pass

		if progress_info != "":
			var progress_label = Label.new()
			progress_label.text = progress_info
			progress_label.add_theme_color_override("font_color", Color(0.6, 0.9, 1.0, 1.0))  # äº®è“è‰²
			progress_label.add_theme_font_size_override("font_size", 24)
			content_container.add_child(progress_label)
	
	# â­ ä»»åŠ¡æç¤º - ç¾åŒ–ç‰ˆæœ¬
	var hint = quest.get("hint", "")
	if hint != "":
		var hint_container = HBoxContainer.new()
		hint_container.add_theme_constant_override("separation", 8)
		
		# æç¤ºå›¾æ ‡
		var hint_icon = Label.new()
		hint_icon.text = "ğŸ’¡"
		hint_icon.add_theme_font_size_override("font_size", 24)
		hint_container.add_child(hint_icon)
		
		# æç¤ºæ–‡æœ¬
		var hint_label = Label.new()
		hint_label.text = "æç¤º: " + hint
		hint_label.add_theme_color_override("font_color", Color(0.9, 0.85, 0.6, 1.0))  # æµ…é‡‘è‰²
		hint_label.add_theme_font_size_override("font_size", 24)
		hint_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
		hint_label.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		hint_container.add_child(hint_label)
		
		content_container.add_child(hint_container)
	
	# å°†å†…å®¹å®¹å™¨æ·»åŠ åˆ°ä»»åŠ¡é¡¹
	quest_item.add_child(content_container)
	
	# â­ æ·»åŠ åˆ°åˆ—è¡¨ï¼ˆé—´è·ç”±quest_listçš„separationç»Ÿä¸€ç®¡ç†ï¼Œæ— éœ€é¢å¤–spacerï¼‰
	quest_list.add_child(quest_item_container)

func _on_quest_started(quest_id: String):
	"""ä»»åŠ¡å¼€å§‹å›è°ƒ"""
	update_quest_list()

func _on_quest_completed(quest_id: String):
	"""ä»»åŠ¡å®Œæˆå›è°ƒ"""
	# â­ æ›´æ–°ç« èŠ‚è¿›åº¦
	var current_chapter = _get_current_chapter()
	_update_chapter_progress(current_chapter)
	update_quest_list()
	# å¯ä»¥åœ¨è¿™é‡Œæ˜¾ç¤ºå®Œæˆæç¤º

func _on_quest_progress_updated(quest_id: String, progress: int, total: int):
	"""ä»»åŠ¡è¿›åº¦æ›´æ–°å›è°ƒ"""
	# â­ ç«‹å³æ›´æ–°ä»»åŠ¡åˆ—è¡¨å’Œç« èŠ‚è¿›åº¦ï¼Œç¡®ä¿è¿›åº¦å®æ—¶æ˜¾ç¤º
	print("[DEBUG] âš¡ ä»»åŠ¡è¿›åº¦æ›´æ–°ä¿¡å·: ", quest_id, " è¿›åº¦: ", progress, "/", total)
	# å¼ºåˆ¶ç«‹å³æ›´æ–°
	var current_chapter = _get_current_chapter()
	_update_chapter_progress(current_chapter)
	call_deferred("update_quest_list")

func _on_chapter_completed(chapter: int, next_region: int):
	"""ç« èŠ‚å®Œæˆå›è°ƒ"""
	print("[INFO] ğŸ‰ ç« èŠ‚ ", chapter, " å®Œæˆï¼Œè§£é”åŒºåŸŸ ", next_region)
	
	# â­ æ˜¾ç¤ºç« èŠ‚å®Œæˆæç¤º
	_show_chapter_completion_notification(chapter, next_region)
	
	# â­ æ›´æ–°ä»»åŠ¡åˆ—è¡¨ï¼ˆæ˜¾ç¤ºä¸‹ä¸€ç« èŠ‚çš„ä»»åŠ¡ï¼‰
	call_deferred("update_quest_list")

func _show_chapter_completion_notification(chapter: int, next_region: int):
	"""æ˜¾ç¤ºç« èŠ‚å®Œæˆé€šçŸ¥"""
	# â­ åœ¨ä»»åŠ¡UIä¸­æ˜¾ç¤ºå®Œæˆæç¤ºï¼ˆåœ¨ChapterProgressLabelä¸‹æ–¹ï¼‰
	# åˆ›å»ºä¸€ä¸ªä¸´æ—¶çš„é€šçŸ¥æ ‡ç­¾
	var notification = Label.new()
	notification.text = "ğŸ‰ ç« èŠ‚ %d å®Œæˆï¼\nåŒºåŸŸ %d å·²è§£é”ï¼" % [chapter, next_region]
	notification.add_theme_color_override("font_color", Color(1.0, 0.8, 0.2, 1.0))  # é‡‘è‰²
	notification.add_theme_font_size_override("font_size", 28)
	notification.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	notification.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	notification.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	
	# â­ æ·»åŠ åˆ°Panelï¼ˆåœ¨ChapterProgressLabelä¸‹æ–¹ï¼‰
	if panel:
		# è®¾ç½®ä½ç½®ï¼ˆä½¿ç”¨anchorsç¡®ä¿æ­£ç¡®å¯¹é½ï¼‰
		notification.set_anchors_preset(Control.PRESET_TOP_WIDE)
		
		# â­ è®¡ç®—ä½ç½®ï¼šåœ¨ChapterProgressLabelä¸‹æ–¹
		# ChapterProgressLabelçš„offset_bottomæ˜¯110ï¼Œé€šçŸ¥æ˜¾ç¤ºåœ¨å…¶ä¸‹æ–¹
		var notification_top = 120.0  # ä»110å‘ä¸‹ç§»åŠ¨10px
		var notification_height = 50.0  # é€šçŸ¥é«˜åº¦
		
		notification.offset_top = notification_top
		notification.offset_bottom = notification_top + notification_height
		notification.offset_left = 10
		notification.offset_right = -10
		panel.add_child(notification)
		
		print("[INFO] æ˜¾ç¤ºç« èŠ‚å®Œæˆé€šçŸ¥: ç« èŠ‚ ", chapter, " å®Œæˆï¼ŒåŒºåŸŸ ", next_region, " å·²è§£é”ï¼Œä½ç½®: ", notification_top)
		
		# 5ç§’åæ·¡å‡ºå¹¶åˆ é™¤
		await get_tree().create_timer(5.0).timeout
		var tween = create_tween()
		if tween:
			tween.tween_property(notification, "modulate:a", 0.0, 1.0)
			tween.tween_callback(notification.queue_free)

func _start_periodic_update():
	"""å®šæœŸæ›´æ–°ä»»åŠ¡åˆ—è¡¨ï¼ˆç¡®ä¿è¿›åº¦å®æ—¶æ˜¾ç¤ºï¼‰"""
	# â­ æ¯0.3ç§’æ›´æ–°ä¸€æ¬¡ä»»åŠ¡åˆ—è¡¨ï¼Œç¡®ä¿è¿›åº¦å®æ—¶æ˜¾ç¤º
	while true:
		await get_tree().create_timer(0.3).timeout
		if visible:
			update_quest_list()

func _on_close_button_pressed():
	"""å…³é—­æŒ‰é’®ç‚¹å‡»"""
	hide_quest_ui()
